<resources>
    <string name="app_name">Aqarz</string>
    <string name="google_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBw6QmlOdBAItUnbgrONR0qTuun4Rx9kT8</string>
    <string name="google_key2" templateMergeStrategy="preserve" translatable="false">AIzaSyA6E2L_Feqp6HMD85eQ1RP06WnykHJj7Mc</string>
    <string name="google_key3" templateMergeStrategy="preserve" translatable="false">AIzaSyCX9U6fj5-Tt5lK_23d2RFsr4Nlp3yqdoM</string>
    <string name="empty_label">Required field !</string>
    <string name="invalid_mobile"> The mobile number is only 14 digits ! </string>
    <string name="does_not_match"> The two passwords  do not match </string>
    <string name="invalid_pass"> The password must be at least 6 characters! </string>
    <string name="invalid_name"> The Name must be at least 6 characters! </string>
    <string name="message_email_correctly">Please enter a valid email </string>
    <string name="no_connection">No internet connection\n Enable Internet</string>
    <string name="weak"> Password must be letters and numbers     </string>
    <string name="no_cancel">No, Cancel</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="success">Success</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="google_maps_keyxx" templateMergeStrategy="preserve" translatable="false">AIzaSyClGIsEG_iClUbZsKreXgoo-lqHmRPvvL4</string>
    <string name="google_maps_keyx" templateMergeStrategy="preserve" translatable="false">AIzaSyD7_RAhw_L6sPjaWPWJ825zuA4-5RA9o-w</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCX9U6fj5-Tt5lK_23d2RFsr4Nlp3yqdoM</string>
    <string name="google_maps_keys" templateMergeStrategy="preserve" translatable="false">AIzaSyDWtJ0cgqHXouF5I5YdPjLzztWQzXM4zQc</string>
    <string name="google_maps_keyaa" templateMergeStrategy="preserve" translatable="false">AIzaSyASdJamfAg4qsuiXSKebSefmQlVBAzhtlk</string>
    <string name="email">email<font color="#AAABB3"><sup>*</sup></font></string>
    <string name="password">Password</string>
    <string name="identity">identity<font color="#AAABB3"><sup>*</sup></font></string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="hint_email_address">Enter your email address</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot_your_password">Forgot password</string>
    <string name="forgot_password_desc">Enter your registered email or mobile to send  password </string>
    <string name="send_code">Send Verification Code</string>
    <string name="new_account">New Account</string>
    <string name="name">Name</string>
    <string name="create_account">Signup</string>
    <string name="have_an_account">"You already have an account ?"</string>
    <string name="verify_account"> Verify your account</string>
    <string name="verify_now"> Verify now</string>
    <string name="resend_again"> Resend again after(30 seconds) </string>
    <string name="resend_now"> Resend now</string>
    <string name="reset_pass"> Reset password</string>
    <string name="enter_verification">Enter the verification code you received in your mobile phone.</string>
    <string name="reset">إعادة تعيين</string>
    <string name="home">Main</string>
    <string name="orders">Orders</string>
    <string name="orders2">Orders</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="messages">"Messages "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="add_aqar">Add Aqar</string>
    <string name="request_aqar">Request Service</string>
    <string name="text">text</string>
    <string name="no_address_found">Address Not found</string>
    <string name="code_send_to_this_number">Code send to this number</string>
    <string name="More">More</string>
    <string name="Settings_title">Settings</string>
    <string name="General_title">General</string>
    <string name="Language">Language</string>
    <string name="Termsandcondition">Terms and condition</string>
    <string name="Privacy">Privacy</string>
    <string name="Call_Us">Contact Us</string>
    <string name="Email_Us">Email Us</string>
    <string name="Please_Login_or_Register">Sign in or create an account</string>
    <string name="Personal_Details">Personal Details</string>
    <string name="Logout">Logout</string>
    <string name="Favorites">Favorites</string>
    <string name="more_profile_title">معاينة الملف الشخصي</string>
    <string name="Done">Done</string>
    <string name="Forgot_your_password">Forgot your password?</string>
    <string name="enter_your_password">Enter your new password?</string>
    <string name="Enter_your_registered">Enter the mobile number to receive
new password</string>
    <string name="Didnt_Received">Didn t Received?</string>
    <string name="SendAgain_">Send Again</string>
    <string name="Sendbutton">Send</string>
    <string name="Update_button">Update</string>
    <string name="Provider_type">Provider</string>
    <string name="user_type">User </string>
    <string name="fillallfileds">Fill all fileds ?</string>
    <string name="changePassword">Change password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_change_lang_post">are you change language to Arabic?</string>
    <string name="are_you_wantlog">Do you want to log out?</string>
    <string name="Information_Aqar">Information Aqar</string>
    <string name="About_Aqar">About  Aqar</string>
    <string name="AqarType">Aqar Type</string>
    <string name="AqarTypeselect">select Aqar Type</string>
    <string name="yaer">year</string>
    <string name="month_six">6 month</string>
    <string name="Duration">Duration</string>
    <string name="Price">Rental price</string>
    <string name="writehear">write here</string>
    <string name="Information_AOwner">Information Owner </string>
    <string name="Information_Tenant">Information Tenant</string>
    <string name="Information_Tenant1">Information Tenant</string>
    <string name="id_upload">Id</string>
    <string name="Date_of_Birth">Date of Birth</string>
    <string name="city">City</string>
    <string name="Type_work">Type work</string>
    <string name="governmental">governmental</string>
    <string name="Special">Special</string>
    <string name="Soldier">Soldier</string>
    <string name="startworkdate">Start work date</string>
    <string name="Total_salary">Total salary</string>
    <string name="Salary_Transferred">Salary Transferred</string>
    <string name="Financial_obligations">Financial obligations</string>
    <string name="National_address">National address</string>
    <string name="Attachdocument">Attach document</string>
    <string name="buldingnumber">bulding number</string>
    <string name="Neighborhoodname">Neighborhood name</string>
    <string name="city_name">city name</string>
    <string name="Postal_code">Postal code</string>
    <string name="additional_number">additional number</string>
    <string name="unit_number">unit number</string>
    <string name="StreetName">Street Name</string>
    <string name="Price_aqar">Price aqar</string>
    <string name="age">age</string>
    <string name="Available_price">Available price</string>
    <string name="Solidarity_salary">Solidarity salary</string>
    <string name="ada_1">Supported by the Ministry of Housing</string>
    <string name="Solidarity_partner">Solidarity partner</string>
    <string name="property_dd">Is the property for your first home</string>
    <string name="Purchase">Purchase</string>
    <string name="rent">rent</string>
    <string name="investment">investment</string>
    <string name="select_space">select space</string>
    <string name="select_price">select price</string>
    <string name="Les_space">Less space</string>
    <string name="Les_price">Less price</string>
    <string name="Maximum_space">Maximum space</string>
    <string name="Maximum_price">Maximum price</string>
    <string name="Communication_Officer">Communication Officer</string>
    <string name="Communication_number"># Communication</string>
    <string name="show_number">show</string>
    <string name="Select_the_search_area">Select the search area</string>
    <string name="English_lang">English</string>
    <string name="Arabic_lang">Arabic</string>
    <string name="writedescription">write description</string>
    <string name="show_select">Show</string>
    <string name="hide_select">hide</string>
    <string name="romes">romes</string>
    <string name="message_hint">message</string>
    <string name="send__butt">Send</string>
    <string name="id_number">Id Number</string>
    <string name="send_order_btn">Send Order</string>
    <string name="contract">Attach the contract</string>
    <string name="Duration_of_funding">Duration of funding</string>
    <string name="AllFiledsREquered">All Fileds Required</string>
    <string name="AddAqares">Add Aqares</string>
    <string name="editAqares">Edit Aqares</string>
    <string name="For_sale">Sell</string>
    <string name="rental_period">rental period</string>
    <string name="Instrument_number">Instrument number</string>
    <string name="Instrument_file">Instrument_file</string>
    <string name="piece_number">piece number</string>
    <string name="No_planned">No. planned</string>
    <string name="Add_charts">Add charts</string>
    <string name="Total_area">Total area</string>
    <string name="age_of_the_property">age of the property</string>
    <string name="Role_number">Role number</string>
    <string name="Street_view">Street view</string>
    <string name="total_price">total price</string>
    <string name="price_one_meter">price of one meter</string>
    <string name="contact_number">contact number</string>
    <string name="Info_users">documentation/information</string>
    <string name="AddTExtHeare">add text heare</string>
    <string name="specificationsِAqares">specifications ِAqares</string>
    <string name="Lounges">Lounges</string>
    <string name="room">Room</string>
    <string name="other_btn">Other</string>
    <string name="Confirm_btn">Confirm</string>
    <string name="canclee">cancle</string>
    <string name="report_c">What problem do you want to report؟</string>
    <string name="report__s1">The data is incorrect</string>
    <string name="report__s2">The image is not appropriate</string>
    <string name="report__s3">other</string>
    <string name="report__s4x">مشكلة في التواصل</string>
    <string name="report__s4">..Tell us more about the problem</string>
    <string name="report__title">Report a problem</string>
    <string name="ThankYou">Thank You</string>
    <string name="ThankYou_rent">You have initial approval, please prepare the following documents so that the work team can communicate with you:</string>
    <string name="sds">
    .Certified recent cover letter. <br />
     .Salary statement for the last 3 months. <br />
    .National ID photo. <br />
.National address
</string>
    <string name="WriteHeare">Write Heare</string>
    <string name="cancle_offer">cancle Offer</string>
    <string name="reasoncanceling">What is the reason for canceling the offer?</string>
    <string name="clientrefused">The client refused the property</string>
    <string name="propertysold">The property has been sold</string>
    <string name="rejectingReason">Reason for rejecting property</string>
    <string name="DeleteAqarezTitle">Delete Aqarez</string>
    <string name="de_st1">تم البيع</string>
    <string name="de_st2">تم التأجير</string>
    <string name="de_st3">لا أرغب بعرض العقار</string>
    <string name="de_st4">أخرى</string>
</resources>