<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/orders" />

    <item
        android:id="@+id/subscriptions"
        android:icon="@drawable/ic_subscriptions"
        android:title="@string/subscriptions" />
    <item
        android:id="@+id/messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/messages" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more"
        android:title="@string/More" />
</menu>