<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:hedgehog="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:src="@drawable/ic_close_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancle_offer"
                android:textSize="15dp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/reasoncanceling"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clientrefused"
                android:textColor="@color/black"
                android:textSize="13dp" />

            <RadioButton
                android:id="@+id/a2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/propertysold"
                android:textColor="@color/black"
                android:textSize="13dp" />

            <RadioButton
                android:id="@+id/a3"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_btn"
                android:textColor="@color/black"
                android:textSize="13dp" />


        </RadioGroup>


        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_fillter_edit" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@drawable/button_login1"
                android:gravity="center"
                android:text="@string/Confirm_btn"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cancle"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@drawable/button_loginc"
                android:gravity="center"
                android:text="@string/canclee"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
