<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_correct_co" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/din_bold"
            android:gravity="center"
            android:text="@string/ThankYou"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"

            android:fontFamily="@font/din_bold"
            android:gravity="start"
            android:text="@string/ThankYou_rent"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/din_bold"
            android:gravity="start"
            android:text="@string/sds"
            android:textColor="@color/textColor"
            android:textSize="12dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login1"
            android:fontFamily="@font/din_bold"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
